--- a/test.html
+++ b/test.html
@@ -4,10 +4,13 @@
         <title>Dont mind me!</title>
 </head>
 <body>
-    <h1>Hey! <br> Look at me!</h1>
-    <p>Hey! Im a <i><b>paragraph</b></i></p>
-    <a href="https://google.com" target="_blank" title="Lets gooo">Click me</a>
-    <img src="img/cat.jpg">
+    <h1>Heading - 1</h1>
+    <h1>Heading - 2</h1>
+    <h1>Heading - 3</h1>
+    <h1>Heading - 4</h1>
+    <h1>Heading - 5</h1>
+    <h1>Heading - 6</h1>
+
 
 
 
